--- a/index2.html
+++ b/index2.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>happeirt</title>
-    <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header>
-        <div class="sign_up+popup">
+        <div class="sign_up_popup">
             <a href="#">1초 회원가입하고 3만원 쿠폰팩 받기</a>
         </div>
         <div class="header">
-            <ul>
+            <ul class="menu">
                 <li>
                     <a href="#"></a>Brand</li>
                 <li>
@@ -29,7 +29,7 @@
                 <img src="./img/logo.png" alt="">
             </h1>
 
-            <ul>
+            <ul class="header_icons">
                 <li>
                     <a href="#">
                         <img src="./img/도보기.png" alt="">
