--- a/index.html
+++ b/index.html
@@ -220,11 +220,11 @@
                     Copyright ⓒ 2018. JoylifeKorea. All Rights Reserved.
                 </p>
             </div>
-            <div class="Guide">
+            <div class="guide">
                 <h2 class="footer_title">guide</h2>
                 <ul>
                     <li><a href="#">
-                        이용약관관
+                        이용약관
                     </a>
                 </li>
                     <li><a href="#">
@@ -240,13 +240,13 @@
             <div class="contact">
                 <h2 class="footer_title">contact</h2>
                 <div class="plus_friend">
-                    <p>플러스친구 해피어트트</p>
+                    <p>플러스친구 해피어트</p>
                     <p> 유선 상담은 진행하지 않습니다</p>
                 </div>
             </div>
         </div>
     </footer>
 
-    <script src="./script/script2.js"></script>
+    <script src="./script/script.js"></script>
 </body>
 </html>
