--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 </a>
                 <div class="shake_texts">
                     <h2 class="shake_name">
-                        해피어트 마이크로바이옴 쉐이크 곡물맛 2개월 플랜(3통통)
+                        해피어트 마이크로바이옴 쉐이크 곡물맛 2개월 플랜(3통)
                     </h2>
                     <p class="shake_discount">
                         <span>&#8361; 149,000</span>
@@ -91,7 +91,7 @@
                 </a>
                 <div class="shake_texts">
                     <h2 class="shake_name">
-                        해피어트 마이크로바이옴 쉐이크 곡물맛 2개월 플랜(3통통)
+                        해피어트 마이크로바이옴 쉐이크 곡물맛 2개월 플랜(3통)
                     </h2>
                     <p class="shake_discount">
                         <span>&#8361; 149,000</span>
@@ -106,7 +106,7 @@
                 </a>
                 <div class="shake_texts">
                     <h2 class="shake_name">
-                        해피어트 마이크로바이옴 쉐이크 곡물맛 2개월 플랜(3통통)
+                        해피어트 마이크로바이옴 쉐이크 곡물맛 2개월 플랜(3통)
                     </h2>
                     <p class="shake_discount">
                         <span>&#8361; 149,000</span>
